# riverside-os

./: .aider.chat.history.md  .aider.input.history  .clinerules  .cursorrules  .env.example  .gitattributes  .gitignore  .rules  AGENTS.md  AI_RULES.md  AR_INV.txt  BACKUP_RESTORE_GUIDE.md  CHANGELOG.md  Cargo.toml  Codex_Custom_Instructions.md  Codex_IMPLEMENT_Prompt_Riverside_OS.md  Codex_PR_Commit_Guidance_Riverside_OS.md  Codex_VALIDATE_Prompt_Riverside_OS.md  DEVELOPER.md  FEAT_UI_OVERHAUL_PR.md  HOTFIX-RESTORE-UI.md  INVENTORY_GUIDE.md  PLAN_GRAPESJS_RECEIPT_BUILDER.md  PLAN_HELP_CENTER.md  PLAN_ONLINE-STORE.md  README.md  REMOTE_ACCESS_GUIDE.md  RMS Schedules 2026.xlsx  ROSHardeningAuditPlan.md  ROS_AI_INTEGRATION_PLAN.md  Riverside_OS_Master_Specification.md  START_ON_MAC.sh  TABLE-FIND.txt  ThingsBeforeLaunch.md  UI_STANDARDS.md  WEBSITE_SYNC_GUIDE.md  backend_audit_report.md  codex_prompt_template.md  counterpoint-schema-report.txt  counterpoint_bridge_final_steps.md  (+14 more)
.cargo/: audit.toml  (+1 more)
client/src-tauri/: .gitignore  Cargo.toml  HARDWARE_SUPPORT.md  tauri.conf.json
client/src-tauri/binaries/: README.md  llama-server-aarch64-apple-darwin  llama-server-x86_64-unknown-linux-gnu
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: app_updates.rs  desktop_files.rs  hardware.rs  install_contract.rs  lib.rs  llama_server.rs  rosie_voice.rs  server_updater.rs  station_config.rs  unified_server.rs
deployment/server-manager-app/src-tauri/: Cargo.toml  tauri.conf.json
ros-dev/src-tauri/: Cargo.toml  tauri.conf.json
ros-dev/src-tauri/src/: app_updates.rs  lib.rs  main.rs
server/: .env.example  Cargo.toml  build.rs  clippy_errors.txt
server/.sqlx/: query-12c32f048463217db19296297af3ce33c2755c74166aaabdb8d22607067f9e45.json  query-16c0ba0c058574a204cae6f74ace439baf839912ef0124d357c65f68054d5619.json  query-1d6cf4f63840ad7dd44cc6385c6fd65e146d9cd5e4fc544c39f0151ba95dafe3.json  query-204244798188132c51e3875f91e3f6de79283fd510f3728a8bbb680ad6d83605.json  query-3394e166a6098c3246cb0e3a105875318c37277dfc2c4cbc31c09f669a6ab969.json  query-3789423c73de22bc6818a38d6ee3557bb2f055e8bcc434574e312d352a2fab9f.json  query-489237757c82b4586feddd611482cbbd85cbf0f62f66b288d3a0316f6a11cfd4.json  query-4fb60d04737d69bb067959d5fd2738c2282d4a6a15932788912300c636492f39.json  query-54d5b2bf1c52bd4663649ae12cbece78775263b9a6d298adc214e46fe96c3033.json  query-57a1ed95ef6137c400ff815910e6f606521e651be5a3673353d3908c6951b661.json  query-66127e1a28ab0b13ec268521c77f8efb27a8dea27b7822635dafba22a589ce50.json  query-80d1c2a32843c6ff3c23bfd0ef0ff970db67b26f8583f484da72bf311c7d65a6.json  query-8250dcd3f9312048eb02fb83633b9f7e04844e7fe03aa164692c18406337948e.json  query-8bc39997075f5b9b9fd5e2f2966bfdfb97ed609bee1a2108adbbb82d886ae8ad.json  query-8f66629115193e4704d0aa5ae7d76744a0bb0a04a8c0489049057a0fd5578072.json  query-9269b38ce71d8698a2ca736e2f5cfda11710dcd5d4b0673b216a0a1a5dd3802e.json  query-96f1b1a94e36ecc51510067d97dc26b167d0bf77a0be5b645443de7cab229c55.json  query-9a5b49bd2d3501d60b1e533bdadcfb5cb1ae2c5aaabffebd52671cd24f1d5336.json  query-b29875bdb6cb275f27f8fe3a81949c8f4cca5191e8d56e610687149e07d7b888.json  query-cb48490dc293d4ee73c38525a89148c77d0ba8f8742f82db7011c367cc18cc13.json  query-deb29b4cf328906008c721e65e17c6694fbde24f7144a642036d520863de9256.json  query-df6809f53d1fa1df03a23f0e726b301e34ab9d73c0aebff248ec59d3e26fbd35.json  query-e0b91f864897651066bd5b983eb36b641b55d1c8257019ac40e49b56f9117d0e.json  query-e6899ad9feeb14e58f6740c788390f5fe3e9af223c2ee9676d3a6349f0bf1c62.json  query-e7b5af60b9fc48b8d9de1d9de08ba08d1b3efc50068fb6602c6d2ceecc270249.json
server/examples/: hash_pin_once.rs
server/scratch/: debug_daily_sales.rs  opencode.json  verify_pin.rs
server/src/: db_migrations.rs  db_startup_diag.rs  embedded_migrations.rs  launcher.rs  lib.rs  main.rs  runtime_config.rs  schema_bootstrap.rs
server/src/api/: ai.rs  alterations.rs  bug_reports.rs  categories.rs  counterpoint_review_packs.rs  counterpoint_sync.rs  counterpoint_workbench.rs  customer_notifications.rs  customers.rs  daily_reports.rs  discount_events.rs  e2e_gateway.rs  gift_cards.rs  hardware.rs  health.rs  help.rs  insights.rs  integrations_cc.rs  inventory.rs  inventory_map.rs  loyalty.rs  mailbox.rs  metabase_proxy.rs  mod.rs  notifications.rs  ops.rs  order_lifecycle.rs  orders.rs  payments.rs  physical_inventory.rs  pos.rs  pos_parked_sales.rs  procurement_imports.rs  products.rs  public_api.rs  purchase_orders.rs  qbo.rs  recovery.rs  reviews.rs  search.rs  (+16 more)
server/src/auth/: mod.rs  permissions.rs  pins.rs  pos_session.rs  staff_avatar.rs  staff_avatar_allowlist.inc  staff_session.rs  store_customer_jwt.rs  store_customer_password.rs
server/src/cache/: mod.rs  redis_client.rs
server/src/jobs/: fal_download.rs  job_types.rs  jobs.rs  mod.rs  qbo_sync.rs  queue.rs  worker.rs
server/src/logic/: alterations_scheduler.rs  backups.rs  bug_reports.rs  checkout_allocations.rs  checkout_incentives.rs  checkout_inventory.rs  checkout_validate.rs  commission_events.rs  commission_payout.rs  commission_recalc.rs  commission_trace.rs  constant_contact.rs  counterpoint_historical_refund_repair.rs  counterpoint_paid_price_repair.rs  counterpoint_reconciliation.rs  counterpoint_return_safety.rs  counterpoint_review_packs.rs  counterpoint_staging.rs  counterpoint_sync.rs  counterpoint_workbench.rs  custom_orders.rs  customer_couple.rs  customer_duplicate_candidates.rs  customer_hub.rs  customer_measurements.rs  customer_merge.rs  customer_notifications.rs  customer_open_deposit.rs  customer_order_history.rs  customer_transaction_history.rs  customers.rs  daily_report.rs  email.rs  fal_sidecar.rs  fulfillment_queue.rs  gift_card_ops.rs  helcim.rs  helcim_parked_recovery.rs  help_corpus.rs  help_corpus_manuals.generated.rs  (+105 more)
server/src/metrics/: business_metrics.rs  collector.rs  exporters.rs  mod.rs  technical_metrics.rs
server/src/middleware/: mod.rs  rate_limit.rs
server/src/models/: mod.rs  product.rs
tools/ros-gemma/: Cargo.toml  Dockerfile  MODEL_PIN.json
(+1943 files in other folders)
