[package]
name = "riverside-server"
version = "0.70.2"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
http = "1"
axum = { version = "0.8", features = ["json", "macros", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }
rust_decimal_macros = "1.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
calamine = "0.26"
thiserror = "2.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
    "json",
] }
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
futures-util = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
uuid = { version = "1.11", features = ["serde", "v4", "v5"] }
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
url = "2.5"
urlencoding = "2.1"
base64 = "0.22"
sha2 = "0.10"
sha-1 = "0.10"
hmac = "0.12"
hex = "0.4"
subtle = "2.6"
ring = "0.17"
chrono-tz = "0.10"
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
opendal = { version = "0.55.0", features = [
    "services-dropbox",
    "services-gdrive",
    "services-onedrive",
    "services-s3",
] }
tokio-cron-scheduler = "0.15.1"
ammonia = "4"
jsonwebtoken = "9"
meilisearch-sdk = "0.32"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-rustls"] }
tracing-opentelemetry = "0.28"
lettre = "0.11"
imap = "2"
native-tls = "0.2"
mail-parser = "0.10"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
