[package]
name = "riverside-pos-tauri"
version = "0.3.1"
description = "Riverside POS (Tauri shell)"
authors = ["Riverside OS"]
edition = "2021"
rust-version = "1.88"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tokio = { version = "1.0", features = ["full"] }
riverside-server = { path = "../../server" }
anyhow = "1.0"
local-ip-address = "0.6"
