[package]
name = "ros-dev-center"
version = "0.70.5"
description = "Riverside OS DevOps Center"
edition = "2021"

[lib]
name = "ros_dev_center_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
