[package]
name = "ros-gemma"
version = "0.1.0"
edition = "2021"
description = "Loopback LLM worker for Riverside OS (stub or llama-server HTTP adapter)."

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
